# react-graphql-template

./: .gitignore  Procfile  README.md  package.json
dna_src/: Cargo.toml  happ.yaml  run_build.sh  run_tests.sh
dna_src/tests/: package-lock.json  package.json
dna_src/tests/src/: index.ts
dna_src/workdir/: dna.yaml
dna_src/zomes/1.hashes/: happ.yaml
dna_src/zomes/1.hashes/tests/src/: index.ts
dna_src/zomes/1.hashes/workdir/: exercise.dna
dna_src/zomes/1.hashes/zomes/exercise/: Cargo.toml
dna_src/zomes/1.hashes/zomes/exercise/src/: lib.rs
dna_src/zomes/notes/: Cargo.toml
dna_src/zomes/notes/src/: lib.rs
ui_src/: connect-to-conductor.js  package.json
ui_src/src/: NotesHApp.js  NotesHApp.tsx  apolloClient.ts  holochainClient.js  holochainClient.ts  index.js  index.tsx  resolvers.js  schema.js  schema.tsx
ui_src/src/graphql/: createNoteMutation.js  getExampleNote.js  updateNoteMutation.ts
