[workspace]
members = [
  "zomes/notes",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hdk = {git = "https://github.com/holochain/holochain", rev = "24477159cd80f3a44fd82bba60baa360e76b9f0d", package = "hdk"}
hc_utils = {git = "https://github.com/holochain/hc-utils", branch = "0.0.101-alpha.0", package = "hc_utils"}
holo_hash = {git = "https://github.com/holochain/holochain.git", rev = "24477159cd80f3a44fd82bba60baa360e76b9f0d", package = "holo_hash"}