[package]
authors = ["guillem.cordoba@gmail.com", "tim@pragmaticmind.com"]
edition = "2018"
name = "notes"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "notes"

[dependencies]
derive_more = "0"
serde = "1"
holo_hash = "0.0.2-alpha"
hdk = "0.0.101-alpha.0"
hc_utils = "0"
paste = "1.0.3"
